# deep-knowledge-agent

./: Dockerfile.agent  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-push.yml
deep_knowledge_agent/: __init__.py  agent_config.json  main.py
deep_knowledge_agent/skills/deep-knowledge/: skill.yaml
tests/: test_main.py
